@@ -7,6 +7,7 @@ Changelog for 1.3.13
 * Changed db setup not to use createdb for simple admin of pg_hba.conf (Chris T)
 * Corrected type = 'password' not handled properly in elements.html (Chris T)
 * Non-billable information now retained in db for timecards (Chris T)
+* Corrected character encoding issue with backup scripts (Chris T)
 
 Changelog for 1.3.12
 * Corrected processing of <?lsmb tags in order/invoice numbers (Chris T)
